<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="60dp"
    android:forceDarkAllowed="false">
    <TextView
        android:id="@+id/pause_message"
        android:text="@string/pause_menu"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/continues"
            android:background="@drawable/round_corner_button"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@drawable/round_corner_button"
            android:backgroundTint="@color/red"
            android:text="@string/exit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>