<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Interface.PadActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:weightSum="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_string"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Chronometer
            android:id="@+id/match_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/match_score"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/blue"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/left"
                style="@style/ScoreButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/left_move"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/right"
                style="@style/ScoreButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:text="@string/right_move"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ship_pad"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/move"
                style="@style/ScoreButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="Move"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/shoot"
                style="@style/ScoreButtons"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/shoot"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>